<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/form_content_side_paddings"
    android:paddingRight="@dimen/form_content_side_paddings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etTitle"
                style="@style/EditTextStyle"
                android:hint="@string/title" />

            <EditText
                android:id="@+id/etTextBody"
                style="@style/EditTextStyle"
                android:layout_height="160dp"
                android:gravity="top"
                android:hint="@string/your_text_here"
                android:inputType="textMultiLine"
                android:lines="10"
                android:fontFamily="robo"
                android:padding="@dimen/paddgin_edit_text" />

            <CheckBox
                android:id="@+id/chbAnonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/i_d_like_to_stay_anonimous"
                android:textColor="@color/hint_text_color" />

            <LinearLayout
                android:id="@+id/llUserDataWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etName"
                    style="@style/EditTextStyle"
                    android:hint="@string/name_surname" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/EditTextStyle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/etPhone"
                    style="@style/EditTextStyle"
                    android:hint="@string/phone"
                    android:inputType="phone" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvProceed"
        style="@style/ButtonStyle"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:text="Send" />
</LinearLayout>