<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_main"
    android:orientation="vertical"
    tools:context="mobile.tracker.bribe.com.bribetracker.fragments.SuccessFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/success" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/thank_you"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/your_claim_was_sent_nsuccessfully"
        android:textColor="@android:color/white"
        android:textSize="13dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvBack"
            style="@style/ButtonTextStyle"
            android:text="@string/return_to_main_page" />
    </LinearLayout>


</LinearLayout>
