<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:paddingLeft="15dp"
                                             android:paddingRight="15dp">

    <TextView
        android:id="@+id/textView"
        style="@style/QuestionBlockStyle"
        android:layout_width="match_parent"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="20dp"
        android:text="I was asked to pay bribe"
        android:textSize="21sp"/>

    <LinearLayout
        android:id="@+id/llAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:layout_below="@+id/textView">

        <TextView
            android:id="@+id/tvYes"
            style="@style/AnswerBlockStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="40dp"
            android:text="@string/answer_yes" />

        <TextView
            android:id="@+id/tvNo"
            style="@style/AnswerBlockStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/answer_no" />

    </LinearLayout>

    <View
        android:id="@+id/vSeparator"
        android:layout_width="381dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/grey"
        android:layout_below="@+id/llAnswers"
         />

    <TextView
        android:id="@+id/tvNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/latest_responses"
        android:layout_centerHorizontal="true"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        android:layout_below="@+id/vSeparator" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvNews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvNews" />


</RelativeLayout>